book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Dulwich.html
+++ b/external/book/content/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Dulwich.html
@@ -7,16 +7,16 @@ sidebar: book
 book:
   language_code: de
   chapter:
-    title: 'Anhang B: Git in Ihre Anwendungen einbetten'
+    title: 'Anhang B: Git in deine Anwendungen einbetten'
     number: 2
   section:
     title: Dulwich
     number: 5
     cs_number: A2.5
-    previous: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-go-git
+    previous: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-go-git
     next: book/de/v2/Anhang-C:-Git-Kommandos-Setup-und-Konfiguration
 title: Git - Dulwich
-url: "/book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-Dulwich.html"
+url: "/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Dulwich.html"
 ---
 <h2 id="_dulwich">Dulwich</h2>
 <div class="paragraph">
@@ -63,7 +63,7 @@ porcelain.log('.', max_entries=1)
 <div class="sect3">
 <h3 id="_weiterführende_informationen_4">Weiterführende Informationen</h3>
 <div class="paragraph">
-<p>API-Dokumentation, Tutorials und viele Beispiele, wie bestimmte Aufgaben mit Dulwich erledigt werden können, finden sind auf der offiziellen Homepage unter <a href="https://www.dulwich.io" class="bare" target="_blank" rel="noopener">https://www.dulwich.io</a>.</p>
+<p>API-Dokumentation, Tutorials und viele Beispiele, wie bestimmte Aufgaben mit Dulwich erledigt werden können, findest du auf der offiziellen Homepage unter <a href="https://www.dulwich.io" class="bare" target="_blank" rel="noopener">https://www.dulwich.io</a>.</p>
 </div>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
