--- a/external/book/content/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Libgit2.html
+++ b/external/book/content/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Libgit2.html
@@ -7,27 +7,27 @@ sidebar: book
 book:
   language_code: de
   chapter:
-    title: 'Anhang B: Git in Ihre Anwendungen einbetten'
+    title: 'Anhang B: Git in deine Anwendungen einbetten'
     number: 2
   section:
     title: Libgit2
     number: 2
     cs_number: A2.2
-    previous: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-Die-Git-Kommandozeile
-    next: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-JGit
+    previous: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Die-Git-Kommandozeile
+    next: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-JGit
 title: Git - Libgit2
-url: "/book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-Libgit2.html"
+url: "/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Libgit2.html"
 ---
 <h2 id="_libgit2">Libgit2</h2>
 <div class="paragraph">
 <p>
-Eine weitere Möglichkeit, die Ihnen zur Verfügung steht, ist die Verwendung von Libgit2.
+Eine weitere Möglichkeit, die dir zur Verfügung steht, ist die Verwendung von Libgit2.
 Mit Libgit2 ist eine von Abhängigkeiten freie Implementierung von Git, wobei der Schwerpunkt auf einer ansprechenden API zur Integration in andere Anwendungen liegt.
-Sie finden das Programm unter <a href="https://libgit2.org" class="bare" target="_blank" rel="noopener">https://libgit2.org</a>.</p>
+Du findest das Programm unter <a href="https://libgit2.org" class="bare" target="_blank" rel="noopener">https://libgit2.org</a>.</p>
 </div>
 <div class="paragraph">
-<p>Lassen Sie uns zunächst einen Blick auf die C-API werfen.
-Hier ist eine schnelle Tour:</p>
+<p>Lass uns zunächst einen Blick auf die C-API werfen.
+Hier ist eine kurzer Überblick:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -60,27 +60,27 @@ Es gibt auch <code>git_repository_open_ext</code>, das Optionen für die Suche e
 <div class="paragraph">
 <p>Der zweite Teil des Codes verwendet die <code>rev-parse</code> Syntax (siehe auch <a href="{{< relurl "book/de/v2/ch00/_branch_references" >}}">Branch Referenzen</a>), um den Commit zu erhalten, auf den HEAD letztlich zeigt.
 Der zurückgegebene Typ ist ein <code>git_object</code> Pointer, der ein Objekt repräsentiert, das in der Git-Objekt-Datenbank für ein Repository steht.
-Bei <code>git_object</code> handelt es sich eigentlich um einen „Parent“-Typ für mehrere verschiedene Arten von Objekten. Das Speicher-Layout für jeden der „Child“-Typen ist das Gleiche wie bei <code>git_object</code>, so dass Sie sicher auf den richtigen Typ verweisen können.
-In diesem Fall würde <code>git_object_type(commit)</code> ein <code>GIT_OBJ_COMMIT</code> zurückgeben, so dass es sicher auf einen <code>git_commit</code> Pointer zu zeigt.</p>
+Bei <code>git_object</code> handelt es sich eigentlich um einen „Parent“-Typ für mehrere verschiedene Arten von Objekten. Das Speicher-Layout für jeden der „Child“-Typen ist das Gleiche wie bei <code>git_object</code>, so dass du sicher auf den richtigen Typ verweisen kannst.
+In diesem Fall würde <code>git_object_type(commit)</code> ein <code>GIT_OBJ_COMMIT</code> zurückgeben, so dass es sicher auf einen <code>git_commit</code> Pointer zeigt.</p>
 </div>
 <div class="paragraph">
 <p>Der nächste Abschnitt zeigt, wie auf die Eigenschaften des Commits zugegriffen werden kann.
 Die letzte Zeile, hier, verwendet einen <code>git_oid</code> Typ; das ist das Anzeige-Format von Libgit2 für einen SHA-1-Hash.</p>
 </div>
 <div class="paragraph">
-<p>From this sample, a couple of patterns have started to emerge:</p>
+<p>Aus diesem Beispiel, wurden einige Pattern erstellt:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Wenn Sie einen Pointer definieren und ihm eine Referenz in einem Libgit2-Aufruf übergeben, wird dieser Aufruf wahrscheinlich einen ganzzahligen Fehlercode zurückgeben.
+<p>Wenn du einen Pointer definieren und ihm eine Referenz in einem Libgit2-Aufruf übergibst, wird dieser Aufruf wahrscheinlich einen ganzzahligen Fehlercode zurückgeben.
 Ein Wert von <code>0</code> zeigt den Erfolg an; alles andere signalisiert einen Fehler.</p>
 </li>
 <li>
-<p>Auch wenn Libgit2 einen Zeiger für Sie erstellt, Sie sind dafür verantwortlich, ihn freizugeben.</p>
+<p>Auch wenn Libgit2 einen Zeiger für dich erstellt, du bist dafür verantwortlich, ihn freizugeben.</p>
 </li>
 <li>
-<p>Wenn Libgit2 einen <code>const</code> Pointer aus einem Aufruf zurückgegeben hat, müssen Sie ihn nicht freigeben, aber er wird ungültig, wenn das Objekt, zu dem er gehört, freigegeben wird.</p>
+<p>Wenn Libgit2 einen <code>const</code> Pointer aus einem Aufruf zurückgegeben hat, musst du ihn nicht freigeben, aber er wird ungültig, wenn das Objekt, zu dem er gehört, freigegeben wird.</p>
 </li>
 <li>
 <p>Das Schreiben in <strong>C</strong> kann ein bisschen mühselig sein.</p>
@@ -89,7 +89,7 @@ Ein Wert von <code>0</code> zeigt den Erfolg an; alles andere signalisiert einen
 </div>
 <div class="paragraph">
 <p>
-Das letzte Argument bedeutet, dass es nicht sehr wahrscheinlich ist, dass Sie einen C-Code schreiben werden, wenn Sie Libgit2 verwenden.
+Das letzte Argument kann bedeuten, dass du eventuell keinen C-Code schreiben wirst, wenn du Libgit2 verwendest.
 Glücklicherweise gibt es eine Reihe von sprachspezifischen Anbindungen, die es ziemlich einfach machen, mit Git-Repositorys in Ihrer spezifischen Programmier-Sprache und -Umgebung zu arbeiten.
 Schauen wir uns das obige Beispiel an, das mit den Ruby-Anbindungen für Libgit2 geschrieben wurde, die Rugged genannt werden und unter <a href="https://github.com/libgit2/rugged" class="bare" target="_blank" rel="noopener">https://github.com/libgit2/rugged</a> zu finden sind.</p>
 </div>
@@ -103,7 +103,7 @@ tree = commit.tree</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Wie Sie sehen können, ist der Code viel weniger verwirrend.
+<p>Wie du siehst, ist der Code viel weniger verwirrend.
 Erstens verwendet Rugged Ausnahmeregeln; es kann Dinge wie <code>ConfigError</code> oder <code>ObjectError</code> aktivieren, um so Fehlerzustände zu signalisieren.
 Zweitens gibt es keine explizite Freigabe von Ressourcen, da in Ruby eine automatische Speicherbereinigung aktiv ist.
 Schauen wir uns ein etwas komplexeres Beispiel an: einen Commit von Grund auf neu zu erstellen</p>
@@ -139,7 +139,7 @@ commit = repo.lookup(commit_id) # <b class="conum">(8)</b></code></pre>
 <p>Einen neuen Blob erstellen, der den Inhalt einer neuen Datei enthält.</p>
 </li>
 <li>
-<p>Ergänzen Sie den Index mit dem ersten Wert des Commit-Baums und fügen Sie die Datei im Pfad <code>newfile.txt</code> hinzu.</p>
+<p>Ergänze den Index mit dem ersten Wert des Commit-Baums und füge die Datei im Pfad <code>newfile.txt</code> hinzu.</p>
 </li>
 <li>
 <p>Damit wird ein neuer Baum in der Objektdatenbank (ODB) erstellt und für den neuen Commit verwendet.</p>
@@ -151,26 +151,26 @@ commit = repo.lookup(commit_id) # <b class="conum">(8)</b></code></pre>
 <p>Die Commit-Beschreibung.</p>
 </li>
 <li>
-<p>Wenn Sie einen Commit erstellen, müssen Sie die Elternteile des neuen Commits angeben.
+<p>Wenn du einen Commit erstellst, musst du die Elternteile des neuen Commits angeben.
 Dazu wird das Ende von HEAD für den einzelnen Elternteil verwendet.</p>
 </li>
 <li>
 <p>Rugged (und Libgit2) können optional eine Referenz aktualisieren, wenn sie einen Commit erstellen.</p>
 </li>
 <li>
-<p>Der Rückgabewert entspricht dem SHA-1-Hash eines neuen Commit-Objekts, mit dem Sie dann ein <code>Commit</code> Objekt erzeugen können.</p>
+<p>Der Rückgabewert entspricht dem SHA-1-Hash eines neuen Commit-Objekts, mit dem du dann ein <code>Commit</code> Objekt erzeugen kannst.</p>
 </li>
 </ol>
 </div>
 <div class="paragraph">
 <p>Der Ruby-Code ist zwar ganz nett und klar und da Libgit2 die Ausführung übernimmt, wird dieser Code auch relativ schnell laufen.
-Falls Sie kein Ruby-Anhänger sind, dann zeigen wir Alternativen in <a href="{{< relurl "book/de/v2/ch00/_libgit2_bindings" >}}">Andere Anbindungen</a>.</p>
+Falls du kein Ruby-Anhänger bist, dann zeigen wir Alternativen in <a href="{{< relurl "book/de/v2/ch00/_libgit2_bindings" >}}">Andere Anbindungen</a>.</p>
 </div>
 <div class="sect3">
 <h3 id="_erweiterte_funktionalität">Erweiterte Funktionalität</h3>
 <div class="paragraph">
 <p>Libgit2 verfügt über einige Funktionen, die nicht zum eigentlichen Umfang von Git gehören.
-Ein Beispiel ist die Erweiterbarkeit: Libgit2 erlaubt es Ihnen, benutzerdefinierte „Backends“ für unterschiedliche Betriebsarten anzubieten, so dass Sie Dinge auf eine andere Art speichern können, als es mit Git möglich ist.
+Ein Beispiel ist die Erweiterbarkeit: Libgit2 erlaubt es dir, benutzerdefinierte „Backends“ für unterschiedliche Betriebsarten anzubieten, so dass du Dinge auf eine andere Art speichern kannst, als es mit Git möglich ist.
 Libgit2 erlaubt benutzerdefinierte Backends unter anderem zum Konfigurieren, die Ref-Speicherung und für die Objektdatenbank.</p>
 </div>
 <div class="paragraph">
@@ -194,7 +194,7 @@ error = git_repository_set_odb(repo, odb); // <b class="conum">(4)</b></code></p
 </div>
 </div>
 <div class="paragraph">
-<p><em>Beachten Sie, dass Fehler zwar erfasst, aber nicht bearbeitet werden. Wir hoffen, dass Ihr Code besser als unserer ist.</em></p>
+<p><em>Beachte, dass Fehler zwar erfasst, aber nicht bearbeitet werden. Wir hoffen, dass dein Code besser als unserer ist.</em></p>
 </div>
 <div class="colist arabic">
 <ol>
@@ -214,7 +214,7 @@ error = git_repository_set_odb(repo, odb); // <b class="conum">(4)</b></code></p
 </div>
 <div class="paragraph">
 <p>Aber was ist das für ein <code>git_odb_backend_mine</code>?
-Nun, das ist der Konstruktor für Ihre eigene ODB-Implementation. Sie können dort machen, was immer Sie wollen, solange Sie die <code>git_odb_backend</code> Struktur richtig eingeben.
+Nun, das ist der Konstruktor für Ihre eigene ODB-Implementation. Du kannst dort machen, was immer du willst, solange du die <code>git_odb_backend</code> Struktur richtig eingibst.
 Hier sieht man, wie es ausschauen <em>könnte</em>:</p>
 </div>
 <div class="listingblock">
@@ -247,18 +247,18 @@ int git_odb_backend_mine(git_odb_backend **backend_out, /*…*/)
 </div>
 <div class="paragraph">
 <p>Die wichtigste Bedingung dabei ist, dass das erste Element von <code>my_backend_struct</code> eine <code>git_odb_backend</code> Struktur sein muss. Dadurch wird sichergestellt, dass das Speicherlayout dem entspricht, was der Libgit2-Code erwartet.
-Der restliche Teil ist beliebig. Diese Struktur kann so groß oder klein sein, wie Sie es brauchen.</p>
+Der restliche Teil ist beliebig. Diese Struktur kann so groß oder klein sein, wie du es brauchst.</p>
 </div>
 <div class="paragraph">
 <p>Die Initialisierungsfunktion weist der Struktur Speicherplatz zu, richtet den benutzerdefinierten Kontext ein und fügt dann die Mitglieder der von ihr unterstützten <code>parent</code> Struktur ein.
-Schauen Sie sich die Datei <code>include/git2/sys/odb_backend.h</code> im Libgit2-Quelltext an, um einen vollständigen Satz von Aufrufsignaturen zu erhalten. Ihr spezieller Anwendungszweck wird Ihnen helfen, zu bestimmen, welche dieser Signaturen Sie dann benötigen.</p>
+Schaue dir die Datei <code>include/git2/sys/odb_backend.h</code> im Libgit2-Quelltext an, um einen vollständigen Satz von Aufrufsignaturen zu erhalten. Dein spezieller Anwendungszweck wird dir helfen, zu bestimmen, welche dieser Signaturen du dann benötigst.</p>
 </div>
 </div>
 <div class="sect3">
 <h3 id="_libgit2_bindings">Andere Anbindungen</h3>
 <div class="paragraph">
 <p>Libgit2 hat Anbindungen für viele Programmier-Sprachen.
-Hier zeigen wir eine kleine Auswahl der wichtigsten Pakete, die zum Zeitpunkt der Erstellung dieses Textes verfügbar waren. Es gibt Bibliotheken für viele andere Sprachen, darunter C++, Go, Node.js, Erlang und die JVM, die alle in unterschiedlich weit entwickelt sind.
+Hier zeigen wir eine kleine Auswahl der wichtigsten Pakete, die zum Zeitpunkt der Erstellung dieses Textes verfügbar waren. Es gibt Bibliotheken für viele andere Sprachen, darunter C++, Go, Node.js, Erlang und die JVM, die alle unterschiedlich weit entwickelt sind.
 Die offizielle Kollektion von Anbindungen kann in den Repositorys unter <a href="https://github.com/libgit2" class="bare" target="_blank" rel="noopener">https://github.com/libgit2</a> gefunden werden.
 Der Code, den wir schreiben werden, wird die Commit-Nachricht des Commits zurückliefern, auf den HEAD letztlich zeigt (etwa so wie <code>git log -1</code>).</p>
 </div>
@@ -266,7 +266,7 @@ Der Code, den wir schreiben werden, wird die Commit-Nachricht des Commits zurüc
 <h4 id="_libgit2sharp">LibGit2Sharp</h4>
 <div class="paragraph">
 <p>
-Wenn Sie eine .NET- oder Mono-Anwendung schreiben, ist LibGit2Sharp (<a href="https://github.com/libgit2/libgit2sharp" class="bare" target="_blank" rel="noopener">https://github.com/libgit2/libgit2sharp</a>) das Richtige für Sie.
+Wenn du eine .NET- oder Mono-Anwendung schreibst, ist LibGit2Sharp (<a href="https://github.com/libgit2/libgit2sharp" class="bare" target="_blank" rel="noopener">https://github.com/libgit2/libgit2sharp</a>) das Richtige für dich.
 Die Anbindungen sind in C# geschrieben und es wurde große Sorgfalt darauf verwendet die unverarbeiteten Libgit2-Aufrufe in CLR-APIs mit der ursprünglichen Funktionalität zu verpacken.
 So sieht unser Beispielprogramm aus:</p>
 </div>
@@ -276,14 +276,14 @@ So sieht unser Beispielprogramm aus:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>Für Windows-Desktop-Anwendungen gibt es außerdem ein NuGet-Paket, das Ihnen einen schnellen Einstieg ermöglicht.</p>
+<p>Für Windows-Desktop-Anwendungen gibt es außerdem ein NuGet-Paket, das dir einen schnellen Einstieg ermöglicht.</p>
 </div>
 </div>
 <div class="sect4">
 <h4 id="_objective_git">objective-git</h4>
 <div class="paragraph">
 <p>
-Wenn Ihre Anwendung auf einer Apple-Plattform läuft, verwenden Sie wahrscheinlich Objective-C als Programmiersprache.
+Wenn deine Anwendung auf einer Apple-Plattform läuft, verwendest du wahrscheinlich Objective-C als Programmiersprache.
 Objective-Git (<a href="https://github.com/libgit2/objective-git" class="bare" target="_blank" rel="noopener">https://github.com/libgit2/objective-git</a>) ist der Name der Libgit2-Anbindungen für diese Umgebung.
 Das Beispielprogramm sieht wie folgt aus:</p>
 </div>
@@ -295,7 +295,7 @@ NSString *msg = [[[repo headReferenceWithError:NULL] resolvedTarget] message];</
 </div>
 </div>
 <div class="paragraph">
-<p>Objective-git ist vollständig kompatibel mit Swift. Sie brauchen also keine Angst zu haben, wenn Sie Objective-C aufgegeben haben.</p>
+<p>Objective-git ist vollständig kompatibel mit Swift. du brauchst also keine Angst zu haben, wenn du Objective-C aufgegeben hast.</p>
 </div>
 </div>
 <div class="sect4">
@@ -319,8 +319,8 @@ Hier ist unser Beispielprogramm:</p>
 <h3 id="_weiterführende_informationen">Weiterführende Informationen</h3>
 <div class="paragraph">
 <p>Eine vollständige Beschreibung der Funktionen von Libgit2 liegt natürlich nicht im Rahmen dieses Buches.
-Wenn Sie weitere Informationen über Libgit2 selbst wünschen, finden Sie eine API-Dokumentation unter <a href="https://libgit2.github.com/libgit2" class="bare" target="_blank" rel="noopener">https://libgit2.github.com/libgit2</a> und eine Reihe von Anleitungen unter <a href="https://libgit2.github.com/docs" class="bare" target="_blank" rel="noopener">https://libgit2.github.com/docs</a>.
-Für die anderen Anbindungen schauen Sie sich das enthaltene README und die Tests an. Häufig gibt es auch kleine Tutorials und Hinweise zum Weiterlesen.</p>
+Wenn du weitere Informationen über Libgit2 selbst wünschst, findest du eine API-Dokumentation unter <a href="https://libgit2.github.com/libgit2" class="bare" target="_blank" rel="noopener">https://libgit2.github.com/libgit2</a> und eine Reihe von Anleitungen unter <a href="https://libgit2.github.com/docs" class="bare" target="_blank" rel="noopener">https://libgit2.github.com/docs</a>.
+Für die anderen Anbindungen schaue dir das enthaltene README und die Tests an. Häufig gibt es auch kleine Tutorials und Hinweise zum Weiterlesen.</p>
 </div>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
