--- a/external/book/content/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-go-git.html
+++ b/external/book/content/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-go-git.html
@@ -7,21 +7,21 @@ sidebar: book
 book:
   language_code: de
   chapter:
-    title: 'Anhang B: Git in Ihre Anwendungen einbetten'
+    title: 'Anhang B: Git in deine Anwendungen einbetten'
     number: 2
   section:
     title: go-git
     number: 4
     cs_number: A2.4
-    previous: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-JGit
-    next: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-Dulwich
+    previous: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-JGit
+    next: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Dulwich
 title: Git - go-git
-url: "/book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-go-git.html"
+url: "/book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-go-git.html"
 ---
 <h2 id="_go_git">go-git</h2>
 <div class="paragraph">
 <p>
-Für den Fall, dass Sie Git in einen in Golang geschriebenen Service integrieren wollen, gibt es auch eine direkte Umsetzung der Go-Bibliothek.
+Für den Fall, dass du Git in einen in Golang geschriebenen Service integrieren möchtest, gibt es auch eine direkte Umsetzung der Go-Bibliothek.
 Diese Implementierung hat keine eigenen Abhängigkeiten und ist daher nicht anfällig für manuelle Fehler in der Speicherverwaltung.
 Sie ist auch transparent für die standardmäßigen Golang-Tools zur Leistungsanalyse wie CPU, Memory-Profiler, Race-Detektor usw.</p>
 </div>
@@ -42,7 +42,7 @@ r, err := git.PlainClone("/tmp/foo", false, &amp;git.CloneOptions{
 </div>
 </div>
 <div class="paragraph">
-<p>Sobald Sie eine <code>Repository</code> Instanz haben, können Sie auf Informationen zugreifen und Änderungen daran vornehmen:</p>
+<p>Sobald du eine <code>Repository</code> Instanz hast, kannst du auf Informationen zugreifen und Änderungen daran vornehmen:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -76,7 +76,7 @@ Die Standard-Implementierung ist der In-Memory Storage, welcher sehr effizient i
 </div>
 <div class="paragraph">
 <p>Die anpassbare Speicherlösung bietet viele interessante Optionen.
-So können Sie beispielsweise mit <a href="https://github.com/go-git/go-git/tree/master/_examples/storage" class="bare" target="_blank" rel="noopener">https://github.com/go-git/go-git/tree/master/_examples/storage</a> Referenzen, Objekte und Konfiguration in einer Aerospike-Datenbank speichern.</p>
+So kannst du beispielsweise mit <a href="https://github.com/go-git/go-git/tree/master/_examples/storage" class="bare" target="_blank" rel="noopener">https://github.com/go-git/go-git/tree/master/_examples/storage</a> Referenzen, Objekte und Konfiguration in einer Aerospike-Datenbank speichern.</p>
 </div>
 <div class="paragraph">
 <p>Ein anderes Feature ist eine flexible Abstraktion des Dateisystems.
@@ -109,7 +109,7 @@ r, err := git.Clone(memory.NewStorage(), nil, &amp;git.CloneOptions{URL: url})</
 <h3 id="_weiterführende_informationen_3">Weiterführende Informationen</h3>
 <div class="paragraph">
 <p>Eine vollständige Behandlung der Fähigkeiten von go-git liegt außerhalb des eigentlichen Ziels dieses Buches.
-Wenn Sie weitere Informationen über go-git wünschen, finden Sie die API-Dokumentation auf <a href="https://pkg.go.dev/github.com/go-git/go-git/v5" class="bare" target="_blank" rel="noopener">https://pkg.go.dev/github.com/go-git/go-git/v5</a> und eine Reihe von Anwendungsbeispielen unter <a href="https://github.com/go-git/go-git/tree/master/_examples" class="bare" target="_blank" rel="noopener">https://github.com/go-git/go-git/tree/master/_examples</a>.</p>
+Wenn du weitere Informationen über go-git wünschst, findest du die API-Dokumentation auf <a href="https://pkg.go.dev/github.com/go-git/go-git/v5" class="bare" target="_blank" rel="noopener">https://pkg.go.dev/github.com/go-git/go-git/v5</a> und eine Reihe von Anwendungsbeispielen unter <a href="https://github.com/go-git/go-git/tree/master/_examples" class="bare" target="_blank" rel="noopener">https://github.com/go-git/go-git/tree/master/_examples</a>.</p>
 </div>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
