--- a/external/book/content/book/uk/v2/Основи-Git-Взаємодія-з-віддаленими-сховищами.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Взаємодія-з-віддаленими-сховищами.html
@@ -20,11 +20,11 @@ url: "/book/uk/v2/Основи-Git-Взаємодія-з-віддаленими-
 ---
 <h2 id="_remote_repos">Взаємодія з віддаленими сховищами</h2>
 <div class="paragraph">
-<p>Задля співпраці з будь-яким проектом Git, вам необхідно знати, як керувати віддаленими сховищами.
-Віддалені сховища — це версії вашого проекту, що розташовані в Інтернеті, або десь у мережі.
+<p>Задля співпраці з будь-яким проєктом Git, вам необхідно знати, як керувати віддаленими сховищами.
+Віддалені сховища — це версії вашого проєкту, що розташовані в Інтернеті, або десь у мережі.
 Їх може бути декілька, кожне зазвичай або тільки для читання, або для читання та змін.
-Співпраця з іншими вимагає керування цими віддаленими сховищами, надсилання (<code>pushing</code>) та отримання (<code>pulling</code>) даних до та з них, коли ви хочете зробити внесок.
-Керування віддаленими сховищами потребує знань про додавання віддалених сховищ, видалення сховищ, що більше не потрібні, керування різноманітними віддаленими гілками та визначення слідкування за ними, і багато іншого.
+Співпраця з іншими вимагає керування цими віддаленими сховищами, надсилання (<code>pushing</code>) та стягування (<code>pulling</code>) даних до та з них, коли ви хочете зробити внесок.
+Керування віддаленими сховищами потребує знань про додавання віддалених сховищ, вилучення сховищ, що більше не потрібні, керування різноманітними віддаленими гілками та визначення стежити за ними чи ні, і багато іншого.
 У цій секції, ми пройдемо ці вміння керування віддаленими сховищами.</p>
 </div>
 <div class="admonitionblock note">
@@ -38,7 +38,6 @@ url: "/book/uk/v2/Основи-Git-Взаємодія-з-віддаленими-
 <div class="paragraph">
 <p>Цілком можливо, що ви працюватимете з <code>віддаленим'' сховищем, що, насправді, міститься на тій саме машині, що ви за нею працюєте.
 Слово </code>віддалений'' не обовʼязково означає, що сховище зберігається десь в мережі чи Інтернеті — лише що воно деінде.
-Working with such a remote repository would still involve all the standard pushing, pulling and fetching operations as with any other remote.
 Взаємодія з таким віддаленим сховищем все одно включатиме звичні операції <code>push</code>, <code>pull</code> і <code>fetch</code> — як і з будь-яким іншим віддаленим сховищем.</p>
 </div>
 </td>
@@ -125,7 +124,7 @@ pb	https://github.com/paulboone/ticgit (push)</code></pre>
 </div>
 <div class="paragraph">
 <p>Тепер ви можете використати рядок <code>pb</code> в командному рядку замість повного посилання.
-Наприклад, якщо ви хочете отримати (<code>fetch</code>) усю інформацію, яке є в Пола, проте її нема у вашому сховищі, ви можете виконати <code>git fetch pb</code>:</p>
+Наприклад, якщо ви хочете здобути (<code>fetch</code>) усю інформацію, яке є в Пола, проте її нема у вашому сховищі, ви можете виконати <code>git fetch pb</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -145,9 +144,9 @@ From https://github.com/paulboone/ticgit
 </div>
 </div>
 <div class="sect3">
-<h3 id="_fetching_and_pulling">Отримання (<code>fetching</code>) та затягування (<code>pulling</code>) з ваших віддалених сховищ</h3>
+<h3 id="_fetching_and_pulling">Здобуття (<code>fetching</code>) та стягування (<code>pulling</code>) з ваших віддалених сховищ</h3>
 <div class="paragraph">
-<p>Як ви щойно побачили, щоб отримати дані з ваших віддалених проектів, ви можете виконати:</p>
+<p>Як ви щойно побачили, щоб отримати дані з ваших віддалених проєктів, ви можете виконати:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -155,27 +154,50 @@ From https://github.com/paulboone/ticgit
 </div>
 </div>
 <div class="paragraph">
-<p>Ця команда заходить на віддалений проект та забирає звідти усі дані, котрих у вас досі нема.
+<p>Ця команда заходить на віддалений проєкт та забирає звідти усі дані, котрих у вас досі нема.
 Після цього, у вас будуть посилання на всі гілки з того сховища, які ви можете зливати або оглядати в будь-який час.</p>
 </div>
 <div class="paragraph">
 <p>Якщо ви зробили клон сховища, команда автоматично додає це віддалене сховище під ім’ям <code>`origin''.
-Отже, `git fetch origin</code> отримує будь-яку нову працю, що її виклали на той сервер після того, як ви зробили його клон (або востаннє отримували зміни з нього).
+Отже, `git fetch origin</code> здобуває будь-яку нову працю, що її виклали на той сервер після того, як ви зробили його клон (або востаннє отримували зміни з нього).
 Важливо зауважити, що команда <code>git fetch</code> лише завантажує дані до вашого локального сховища — вона автоматично не зливає їх з вашою роботою, та не змінює вашу поточну працю.
 Вам буде потрібно вручну її злити, коли ви будете готові.</p>
 </div>
 <div class="paragraph">
-<p>Якщо ваша поточна гілка налаштована слідкувати за віддаленою гілкою (докладніше в наступній секції та <a href="{{< relurl "book/uk/v2/ch00/ch03-git-branching" >}}">Галуження в git</a>), ви можете виконати команду <code>git pull</code> щоб автоматично отримати зміни та злити віддалену гілку до вашої поточної гілки.
-Це може бути легшим та зручнішим методом для вас. Та команда <code>git clone</code> автоматично налаштовує вашу локальну гілку master слідкувати за віддаленою гілкою master (хоча вона може називатись і по іншому) на віддаленому сервері, з якого ви зробили клон.
-Виконання <code>git pull</code> зазвичай дістає дані з серверу, з якого ви зробили клон, та намагається злити її з кодом, над яким ви зараз працюєте.</p>
+<p>Якщо ваша поточна гілка налаштована стежити за віддаленою гілкою (докладніше в наступній секції та <a href="{{< relurl "book/uk/v2/ch00/ch03-git-branching" >}}">Галуження в git</a>), ви можете виконати команду <code>git pull</code> щоб автоматично отримати зміни та злити віддалену гілку до вашої поточної гілки.
+Це може бути легшим та зручнішим методом для вас. Та команда <code>git clone</code> автоматично налаштовує вашу локальну гілку <code>master</code> стежити за віддаленою гілкою <code>master</code> (хоча вона може називатись і по іншому) на віддаленому сервері, з якого ви зробили клон.
+Виконання <code>git pull</code> зазвичай здобуває дані з серверу, з якого ви зробили клон, та намагається злити їх з кодом, над яким ви зараз працюєте.</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Зауваження</div>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Починаючи з версії Git 2.27 і вище, <code>git pull</code> повертатиме попередження, якщо параметр <code>pull.rebase</code> не встановлено.
+Git попереджатиме вас допоки ви не встановите значення для цього параметру.</p>
+</div>
+<div class="paragraph">
+<p>Якщо ви потребуєте типову поведінку від Git (перемотання, якщо можливе, або ж створення коміту злиття), виконайте команду:
+<code>git config --global pull.rebase "false"</code></p>
+</div>
+<div class="paragraph">
+<p>Якщо ви бажаєте перебазовувати, коли стягуєте зміни:
+<code>git config --global pull.rebase "true"</code></p>
+</div>
+</td>
+</tr>
+</table>
 </div>
 </div>
 <div class="sect3">
 <h3 id="_pushing_remotes">Надсилання змін до ваших віддалених сховищ</h3>
 <div class="paragraph">
-<p>Коли ви довели свій проект до стану, коли хочете ним поділитись, вам треба надіслати (<code>push</code>) ваші зміни нагору (<code>upstream</code>).
+<p>Коли ви довели свій проєкт до стану, що хочете ним поділитись, вам треба надіслати (<code>push</code>) ваші зміни нагору (<code>upstream</code>).
 Це робиться простою командою: <code>git push &lt;назва сховища&gt; &lt;назва гілки&gt;</code>.
-Якщо ви бажаєте викласти свою гілку master до вашого серверу <code>origin</code> (клонування зазвичай налаштовує обидва імені для вас автоматично), ви можете виконати наступне для надсилання всіх зроблених комітів до сервера:</p>
+Якщо ви бажаєте викласти свою гілку <code>master</code> до вашого серверу <code>origin</code> (клонування зазвичай налаштовує обидва імені для вас автоматично), ви можете виконати наступне для надсилання всіх зроблених комітів до сервера:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -212,8 +234,8 @@ From https://github.com/paulboone/ticgit
 </div>
 </div>
 <div class="paragraph">
-<p>Вона виводить посилання для віддаленого сховища, а також інформацію про слідкування за гілками.
-Команда ґречно розповідає вам, що якщо ви на гілці master та виконаєте команду <code>git pull</code>, вона автоматично зіллє гілку master з віддаленою після того, як отримає всі дані з віддаленого сховища.
+<p>Вона виводить посилання для віддаленого сховища, а також інформацію про стеження за гілками.
+Команда ґречно розповідає вам, що якщо ви на гілці <code>master</code> та виконаєте команду <code>git pull</code>, вона автоматично зіллє гілку <code>master</code> з віддаленою після того, як отримає всі дані з віддаленого сховища.
 Також видано список усіх віддалених посилань, які були забрані.</p>
 </div>
 <div class="paragraph">
@@ -245,12 +267,12 @@ From https://github.com/paulboone/ticgit
 </div>
 </div>
 <div class="paragraph">
-<p>Ця команда показує, до яких гілок автоматично надсилаються ваші зміни, коли ви виконуєте <code>git push</code>, доки перебуваєте на певної гілці.
-Вона також показує, яких віддалених гілок з серверу у вас нема, які віддалені гілки, що у вас є, були видалені з серверу, і декілька локальних гілок, що можуть автоматично зливатися з віддаленими гілками, за якими стежать, коли ви виконуєте <code>git pull</code>.</p>
+<p>Ця команда показує, до яких гілок автоматично надсилаються ваші зміни, коли ви виконуєте <code>git push</code>, доки перебуваєте на певній гілці.
+Вона також показує, яких віддалених гілок з серверу у вас нема, які віддалені гілки, що у вас є, були вилучені з серверу, і декілька локальних гілок, що можуть автоматично зливатися з віддаленими гілками, за якими вони стежать, коли ви виконуєте <code>git pull</code>.</p>
 </div>
 </div>
 <div class="sect3">
-<h3 id="_перейменування_та_видалення_віддалених_сховищ">Перейменування та видалення віддалених сховищ</h3>
+<h3 id="_перейменування_та_вилучення_віддалених_сховищ">Перейменування та вилучення віддалених сховищ</h3>
 <div class="paragraph">
 <p>Ви можете виконати <code>git remote rename</code>, щоб перейменувати віддалене сховище.
 Наприклад, щоб перейменувати <code>pb</code> на <code>paul</code>, ви можете зробити це за допомогою <code>git remote rename</code>:</p>
@@ -268,7 +290,7 @@ paul</code></pre>
 Що раніше мало назву <code>pb/master</code>, тепер називається <code>paul/master</code>.</p>
 </div>
 <div class="paragraph">
-<p>Якщо ви з якоїсь причини бажаєте видалити віддалене сховище — ви перемістили сервер або більше не використовуєте якесь дзеркало, або можливо хтось припинив співпрацю — ви можете використати <code>git remote remove</code> або <code>git remote rm</code>:</p>
+<p>Якщо ви з якоїсь причини бажаєте вилучити віддалене сховище — ви перемістили сервер або більше не використовуєте якесь дзеркало, або, можливо, хтось припинив співпрацю — ви можете використати <code>git remote remove</code> або <code>git remote rm</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -278,7 +300,7 @@ origin</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Once you delete the reference to a remote this way, all remote-tracking branches and configuration settings associated with that remote are also deleted.</p>
+<p>Як тільки ви вилучаєте посилання на віддалене сховище в такий спосіб, усі віддалені гілки та налаштування, що пов’язані із цим віддаленим сховищем, також будуть вилучені.</p>
 </div>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
