book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/de/v2/GitHub-Mitwirken-an-einem-Projekt.html
+++ b/external/book/content/book/de/v2/GitHub-Mitwirken-an-einem-Projekt.html
@@ -26,7 +26,7 @@ title: Git - Mitwirken an einem Projekt
 <div class="paragraph">
 <p>
 Wenn du zu einem bestehenden Projekt beitragen möchtest, zu dem du keine Push-Berechtigungen hast, kannst du das Projekt „forken“.
-Wenn du ein Projekt „forkst“, erstellt GitHub eine Kopie des Projekts, die ganz dir gehört. Es befindet sich in deinem Namensraum (engl. namespace), und du können Daten dorthin pushen.</p>
+Wenn du ein Projekt „forkst“, erstellt GitHub eine Kopie des Projekts, die ganz dir gehört. Es befindet sich in deinem Namensraum (engl. namespace), und du kannst Daten dorthin pushen.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -37,7 +37,7 @@ Wenn du ein Projekt „forkst“, erstellt GitHub eine Kopie des Projekts, die g
 <td class="content">
 <div class="paragraph">
 <p>In der Vergangenheit war der Begriff „Fork“ in diesem Zusammenhang etwas Negatives und bedeutete, dass jemand ein Open-Source-Projekt in eine andere Richtung lenkt, manchmal ein konkurrierendes Projekt erstellt und die Beitragenden aufgespaltet hat.
-In GitHub ist ein „Fork“ schlichtweg das gleiche Projekt in deinem eigenen Namensraum, so dass du Änderungen an einem Projekt öffentlich vornehmen kannst und dabei einen transparenten Ansatz verfolgest.</p>
+In GitHub ist ein „Fork“ schlichtweg das gleiche Projekt in deinem eigenen Namensraum, so dass du Änderungen an einem Projekt öffentlich vornehmen kannst und dabei einen transparenten Ansatz verfolgst.</p>
 </div>
 </td>
 </tr>
